// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  expandToggleDisplay: 'icon'
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  expandToggleDisplay: 'text'
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  expandToggleDisplay: 'icon'
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  expandToggleDisplay: 'text'
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  lang: 'fr'
}: 1`] = `
<mg-panel lang="fr">
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Modifier le titre de la section." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  lang: 'xx'
}: 1`] = `
<mg-panel lang="xx">
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  titlePattern: /joker/,
  titlePatternErrorMessage: "You can't enter a bad guy !"
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titlePosition: 'left'
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titlePosition: 'right'
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header mg-c-panel__header--reverse" id="identifier-header">
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
          <div class="mg-c-panel__header-title mg-c-panel__header-title--reverse">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args { identifier: 'identifier', panelTitle: 'panel title' }: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args { identifier: 'identifier', panelTitle: 'panel title', expanded: true }: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="true" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-disabled="true" aria-expanded="true" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--disabled mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-disabled="true" aria-expanded="true" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--disabled mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-disabled="true" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--disabled mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 4`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-disabled="true" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--disabled mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" pattern-error-message="You can't enter a bad guy !" value="panel title">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="false" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" pattern="^(?!(joker)$)[a-z A-Z0-9s]+$" type="text" value="panel title">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" pattern-error-message="You can't enter a bad guy !" value="joker">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="true" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" pattern="^(?!(joker)$)[a-z A-Z0-9s]+$" type="text" value="joker">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 4`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" pattern-error-message="You can't enter a bad guy !" value="joker">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="true" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" pattern="^(?!(joker)$)[a-z A-Z0-9s]+$" type="text" value="joker">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case no enter in input 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case no enter in input 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" value="panel title">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="false" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case no enter in input 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded false 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded false 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="true" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded false 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded true 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="true" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded true 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded true 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="true" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" value="panel title">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="false" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 4`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case first-of-type 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case first-of-type 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" value="panel title">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="false" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case first-of-type 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case last-of-type 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case last-of-type 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title mg-c-panel__header-title--full">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
              </span>
            </mg-button>
            <mg-input-text label-hide="" value="panel title">
              <mock:shadow-root>
                <div class="mg-c-input mg-c-input--has-buttons-group-append mg-c-input--is-input-group-append mg-c-input--text mg-c-input--width-full">
                  <div class="mg-c-input__title mg-u-visually-hidden">
                    <mg-input-title identifier="identifier-edition-input">
                      Edit section title.
                    </mg-input-title>
                  </div>
                  <div class="mg-c-input__input-container">
                    <div class="mg-c-input__input">
                      <div class="mg-c-input__with-character-left" style="--mg-character-left-message-length: 0;">
                        <input aria-describedby="identifier-edition-input-character-left" aria-invalid="false" class="mg-c-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                      </div>
                      <slot name="append-input"></slot>
                    </div>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-button aria-label="Cancel" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-cancel">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="cross"></mg-icon>
              </mg-button>
              <mg-button aria-label="Confirm" is-icon="" role="button" slot="append-input" tabindex="0">
                <mock:shadow-root>
                  <div class="mg-c-button mg-c-button--icon mg-c-button--secondary" id="identifier-edition-button-validate">
                    <div class="mg-c-button__content">
                      <slot></slot>
                    </div>
                  </div>
                </mock:shadow-root>
                <mg-icon icon="check"></mg-icon>
              </mg-button>
            </mg-input-text>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case last-of-type 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-c-panel" id="identifier">
      <mg-card>
        <header class="mg-c-panel__header" id="identifier-header">
          <div class="mg-c-panel__header-title">
            <mg-button aria-controls="identifier-content" aria-expanded="false" aria-label="Updated panel title" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat" id="identifier-collapse-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <span class="mg-c-panel__collapse-button-content">
                <mg-icon class="mg-c-panel__collapse-button-icon mg-c-panel__collapse-button-icon--reverse" icon="chevron-up"></mg-icon>
                Updated panel title
              </span>
            </mg-button>
            <mg-button aria-label="Edit section title." is-icon="" role="button" tabindex="0">
              <mock:shadow-root>
                <div class="mg-c-button mg-c-button--flat mg-c-button--icon" id="identifier-edit-button">
                  <div class="mg-c-button__content">
                    <slot></slot>
                  </div>
                </div>
              </mock:shadow-root>
              <mg-icon icon="pen"></mg-icon>
            </mg-button>
          </div>
          <div class="mg-c-panel__header-content">
            <slot name="header-right"></slot>
          </div>
        </header>
        <article aria-labelledby="identifier-header" class="mg-c-panel__content" hidden="" id="identifier-content">
          <slot></slot>
        </article>
      </mg-card>
    </section>
  </mock:shadow-root>
</mg-panel>
`;
